--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,18 @@
 ################
 ######TODO######
 ################
-- create picture model 
-    1 lookbook for many pictures
-    * picture models should have a url to image attribute
+- detail view for pictures
 - figure out where to host pics
+    * need to define 'MEDIA_URL' & 'MEDIA_ROOT' in settings.py
 
+- start setting up frontend
 
-- start frontend
 
 ################
 #CHANGES I MADE#
 ################
-
-- filter lookbooks by url parameter 
+- create picture model
+- established 1 to many relationship between lookbook and pictures
 
 
 #################
@@ -23,4 +22,4 @@
 - django make url parameter lowercase without spaces
 - established 1 to many relationship between brand and lookbooks
 - feed app 
-    * consists of the brands, their lookbooks, and their pictures
+- filter lookbooks by season parameter
