--- a/TODO.txt
+++ b/TODO.txt
@@ -2,17 +2,33 @@
 ######TODO######
 ################
 - create a readme
-- start setting up frontend
 - implement backend testing with pytest
+
+- fix image scaling
+
+- create pages
+  * home page should show previews of the collection
+    - on hover -> specify which brand & season
+- need picture detail view
+
+- figure out how to theme mui components
+- need better icons
+- fill backend with more data
+- need transition animations
+
+- light & night theme mode switch
 
 
 ################
 #CHANGES I MADE#
 ################
-- added admin upload fields for image uploads
-- connect django w/ amazon s3 bucket to host images
-- setup aws cdn for s3
-- detail view for individual pictures
+- added font
+- menu with treeitem api 
+- figured out how to list multiple seasons
+- created custom urls depending on nav links 
+- found out how to display photos
+- mui grid list for image gallery & spinner
+- combined navbar + treeview 
 
 
 #################
@@ -25,3 +41,7 @@
 - filter lookbooks by season parameter
 - create picture model
 - established 1 to many relationship between lookbook and pictures
+- added admin upload fields for image uploads
+- connect django w/ amazon s3 bucket to host images
+- setup aws cdn for s3
+- detail view for individual pictures
