--- a/TODO.txt
+++ b/TODO.txt
@@ -24,13 +24,11 @@
 ################
 #CHANGES I MADE#
 ################
-- test_feed_urls .py
-- test_feed_models.py
-- test_feed_views.py (look at notes)
+- unit test serializers
 
 * in progress *
-    - serializers
-    https://github.com/encode/django-rest-framework/blob/master/tests/test_serializer.py
+    - start users app
+
 
 #################
 ####COMPLETED####
@@ -94,3 +92,6 @@
 - redirect selected lookbook to picture list page
 - dynamically styled grid component
 - brand name headers on lookbooklistview
+- test_feed_urls .py
+- test_feed_models.py
+- test_feed_views.py (look at notes)
