--- a/TODO.txt
+++ b/TODO.txt
@@ -17,7 +17,6 @@
 
   * fix *
     - drawer width
-    - fix the indexing of url paths for modal
     - fix mobile scroll to top 
 
   * extra *
@@ -28,14 +27,16 @@
 ################
 #CHANGES I MADE#
 ################
-- using rest-auth for login & logout
-- created auth context 
-- /login route & storing token in local storage
-- logout button
+- set up authReducer for login and register
+- refactored authContext
+- npm i reinspect -> monitors dispatches with redux dev tools
+- display token to be fetched when user is created
+- styled & customized the sign up & log in forms
 
 * in progress * 
+  ** fix iPhone bug with react router 
+  - payload error message is undefined
   * redirect after login and refresh
-  - theme the sign up and log in forms depending on theme mode
   
 
 #################
@@ -116,3 +117,7 @@
 - changed view to generic class based views
 - custom permission (owner&admin / owner only for update/delete)
 - started /register frontend
+- using rest-auth for login & logout
+- created auth context 
+- /login route & storing token in local storage
+- logout button
