--- a/TODO.txt
+++ b/TODO.txt
@@ -7,8 +7,6 @@
 
 * frontend *
     routes:
-        -/profile/update 
-          * requires token key 
         -/users 
           * implement a filter by username search bar feature
 
@@ -18,10 +16,10 @@
     - need to make scrollbar for drawer
 
   * fix *
+    * redirect after login and refresh
+    * payload error message is undefined
     - drawer width
     - fix mobile scroll to top 
-    * redirect after login and refresh
-    - payload error message is undefined
 
   * extra *
     - fade transition for app bar
@@ -31,16 +29,17 @@
 ################
 #CHANGES I MADE#
 ################
-* fade transition theme mode switch
-- change user lookup from id to username
-- refactor grey switch into its own component
-- create profile page show on navbar
-- need to store username in localStorage when user logs in 
-- restrict access to profile route
-  * redirects to log in page if user is not logged in
+- updated pytests
+- dynamically theme the tab panel
+- edit profile button
+- MyProfile.js & UserProfile.js (profile of any user w/ no edit icon)
+- set up django-rest-auth password reset w/ email
+- added location & date joined to users api
 
 * in progress * 
-  * theme the tab panel
+    - ProfileUpdate.js 
+        -> on click should bring user to profile/update
+            * show edit icon only if profile belongs to user
 
 
 #################
@@ -144,3 +143,10 @@
 - test_users_urls.py 
 - test_users_models.py
 - test_users_views.py
+* fade transition theme mode switch
+- change user lookup from id to username
+- refactor grey switch into its own component
+- create profile page show on navbar
+- need to store username in localStorage when user logs in 
+- restrict access to profile route
+  * redirects to log in page if user is not logged in
